# credit-card-fraud-detection-case

./: .gitignore  README.md  docker-compose.yaml  mlflow.Dockerfile
fraud-detection-server/: Dockerfile  README.md  pyproject.toml
fraud-detection-server/app/: main.py
fraud-detection-server/app/core/: model_loader.py  prediction_request.py
fraud-detection-server/docs/: app.html  search.js
fraud-detection-server/docs/app/: core.html  main.html
fraud-detection-server/docs/app/core/: model_loader.html  prediction_request.html
fraud-detection-trainer/: .dockerignore  .env  Dockerfile  README.md  pyproject.toml
fraud-detection-trainer/config/: training.yaml
fraud-detection-trainer/docs/: search.js  src.html
fraud-detection-trainer/docs/src/: fraud_detection_trainer.html
fraud-detection-trainer/docs/src/fraud_detection_trainer/: infra.html  jobs.html
fraud-detection-trainer/docs/src/fraud_detection_trainer/infra/: config.html  dataset.html  dataset_test.html  services.html
fraud-detection-trainer/docs/src/fraud_detection_trainer/jobs/: job.html  training_job.html
fraud-detection-trainer/src/fraud_detection_trainer/: __main__.py
fraud-detection-trainer/src/fraud_detection_trainer/core/: feature_engineer.py  preprocessing.py  schema.py
fraud-detection-trainer/src/fraud_detection_trainer/core/services/: training_service.py
fraud-detection-trainer/src/fraud_detection_trainer/infra/: config.py  dataset.py  dataset_test.py  services.py
fraud-detection-trainer/src/fraud_detection_trainer/jobs/: job.py  training_job.py
