[project]
name = "fraud-detection-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi-cli>=0.0.5",
    "fastapi[standard]>=0.115.2",
    "mlflow>=2.17.0",
    "pandas>=2.2.3",
    "pydantic>=2.9.2",
    "ruff>=0.7.0",
    "scikit-learn>=1.5.2",
]

[tool.uv]
dev-dependencies = [
    "pdoc>=15.0.0",
]

[tool.uv.sources]
fraud_detection_trainer = { path = "/app/package_repository/fraud_detection_trainer-0.1.0-py3-none-any.whl" }

[tool.ruff]
line-length = 90
indent-width = 4
